--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons": "^0.0.11",
     "core-js": "^3.6.5",
     "element-plus": "^2.1.1",
+    "husky": "^7.0.4",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
