--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "prepare": "husky install",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
